--- a/src/pages/Board/ColumnsContainer/ColumnsContainer.pcss
+++ b/src/pages/Board/ColumnsContainer/ColumnsContainer.pcss
@@ -2,7 +2,7 @@
   @apply w-full h-full flex flex-row justify-start pb-6;
 
   & .columns-add {
-    @apply flex flex-col space-y-3;
+    @apply flex flex-col space-y-3 pr-12;
   }
 
   & .columns-add-bttn {
