--- a/src/pages/Boards/Boards.pcss
+++ b/src/pages/Boards/Boards.pcss
@@ -2,7 +2,7 @@
   @apply flex flex-col items-center my-12 w-full;
 
   & .boards-heading {
-    @apply w-fit pl-20 pr-8 py-2 mb-6 bg-additional-500 text-xl  text-white font-semibold rounded-tr-xl rounded-br-xl z-50 -translate-x-20;
+    @apply w-fit pl-20 pr-8 py-2 mb-6 bg-additional-500 text-xl  text-white font-semibold rounded-tr-xl rounded-br-xl z-50 -translate-x-20 uppercase;
   }
 
   & .boards_wrapper {
