--- a/src/pages/Home/Home.pcss
+++ b/src/pages/Home/Home.pcss
@@ -29,12 +29,12 @@
     @apply text-secondary-500 text-9xl font-bold block uppercase md:text-8xl xs:text-6xl;
   }
 
-  & .home__descr > p {
+  & .home__descr {
     @apply text-lg mt-2;
   }
 
   & .home__descr * li {
-    @apply text-lg list-disc mx-6 text-secondary-500;
+    @apply list-disc mx-6 text-secondary-500;
   }
 
   & .home__descr * span {
@@ -42,6 +42,6 @@
   }
 
   & .home__img {
-    @apply w-full ;
+    width: 60%;
   }
 }
